samples/_failures_safe/1761295000_3d3daa_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e368a2b4.c: In function ‘main’:
./samples/SAFE/__tmp_e368a2b4.c:132: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_e368a2b4.c:131:5: error: expected declaration or statement at end of input
  131 |     if
      |     ^~
